--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="shop_item_icon">Shop Item Icon</string>
+    <string name="breakfast">Breakfast</string>
+    <string name="lunch">Lunch</string>
+    <string name="dinner">Dinner</string>
 
 
     <string name="lorem_ipsum">
